--- a/appsettings.json
+++ b/appsettings.json
@@ -9,9 +9,109 @@
   "Repository": "Pwa",
   "ForceMobileRouting": false,
   "Info": {
-    "Release": "1.9.0",
+    "Release": "1.1.0",
     "Name": "App",
     "Url": "www.timegroup.it",
     "Email": "aaa@vvv.it"
+  },
+  "WizardInfrastrutture": {
+    "Menu": {
+      "Title": "Menu",
+      "Dense": true,
+      "NestedMenus": [
+        {
+          "Name": "Logistica",
+          "Description": "",
+          "Expanded": true,
+          "NestedMenus": [
+            {
+              "Name": "Fornitore Rossi",
+              "Description": "Fornitore Rossi",
+              "FormId": "AFE63957-3F5E-4ECF-91A5-C4B2E5B341A9"
+            },
+            {
+              "Name": "Secondo Wizard",
+              "Description": "Secondo Wizard",
+              "FormId": "AFE63953-3F5E-4ECF-91A5-C4B2E5B341A9"
+            },
+            {
+              "Name": "Terzo Wizard",
+              "Description": "Terzo Wizard",
+              "FormId": "15AD27C7-D3AB-4FFD-A238-F59D9FE481A0"
+            }
+          ]
+        },
+        {
+          "Name": "Amministrazione",
+          "Description": "",
+          "Expanded": false,
+          "NestedMenu": []
+        }
+      ]
+    },
+    "Wizard": [
+      {
+        "Id": "AFE63957-3F5E-4ECF-91A5-C4B2E5B341A9",
+        "Title": "Maschera di Lettura Barcode",
+        "Components": [
+          {
+            "Id": "AFE63957-3F5E-4ECF-91A5-C4B2E5B341A8",
+            "Assembly": "Blazor.WizardComponent.Client",
+            "Namespace": "Blazor.WizardComponent.Client.Components",
+            "Name": "BarcodeComponent",
+            "Title": "Lettura Primo Barcode",
+            "Description": "Maschera di gestione Barcode",
+            "Defaults": [],
+            "ComponentParameters": [
+              {
+                "Name": "Immediate",
+                "Value": true
+              },
+              {
+                "Name": "InputMaxCharacters",
+                "Value": 25
+              },
+              {
+                "Name": "HelperText",
+                "Value": "In caso di inserimento manuale confermare con Enter"
+              },
+              {
+                "Name": "IsLocalStorage",
+                "Value": true
+              }
+            ]
+          },
+          {
+            "Id": "AFE63957-3F5E-4ECF-91A6-C4B2E5B341A6",
+            "Assembly": "Blazor.WizardComponent.Client",
+            "Namespace": "Blazor.WizardComponent.Client.Components",
+            "Name": "BarcodeComponent",
+            "Title": "Lettura Secondo Barcode",
+            "Description": "Maschera di gestione Barcode",
+            "Defaults": [],
+            "ComponentParameters": [
+              {
+                "Name": "Immediate",
+                "Value": true
+              },
+              {
+                "Name": "InputMaxCharacters",
+                "Value": 10
+              },
+              {
+                "Name": "HelperText",
+                "Value": "In caso di inserimento manuale confermare con Enter"
+              },
+              {
+                "Name": "IsLocalStorage",
+                "Value": true
+              }
+            ]
+          }
+        ]
+
+
+      }
+    ]
   }
 }
