--- a/appsettings.json
+++ b/appsettings.json
@@ -78,6 +78,14 @@
               {
                 "Name": "IsLocalStorage",
                 "Value": true
+              },
+              {
+                "Name": "Required",
+                "Value": true
+              },
+              {
+                "Name": "RequiredError",
+                "Value": "Campo Obbligatorio!"
               }
             ]
           },
@@ -105,6 +113,36 @@
               {
                 "Name": "IsLocalStorage",
                 "Value": true
+              },
+              {
+                "Name": "Required",
+                "Value": true
+              },
+              {
+                "Name": "RequiredError",
+                "Value": "Campo Obbligatorio!"
+              }
+            ]
+          },
+          {
+            "Id": "AFE63957-3F5E-4ECF-91A6-C4B2E5B341A7",
+            "Assembly": "Blazor.WizardComponent.Client",
+            "Namespace": "Blazor.WizardComponent.Client.Components",
+            "Name": "RiepilogoComponent",
+            "Title": "Riepilogo",
+            "Description": "Salvataggio Cartellino",
+            "Defaults": [],
+            "ComponentParameters": [],
+            "DtoParameters": [
+              {
+                "FromId": "AFE63957-3F5E-4ECF-91A5-C4B2E5B341A8",
+                "FromProperty": "Barcode",
+                "ToProperty": "PrimoBarcode"
+              },
+              {
+                "FromId": "AFE63957-3F5E-4ECF-91A6-C4B2E5B341A6",
+                "FromProperty": "Barcode",
+                "ToProperty": "SecondoBarcode"
               }
             ]
           }
