--- a/appsettings.json
+++ b/appsettings.json
@@ -86,6 +86,10 @@
               {
                 "Name": "RequiredError",
                 "Value": "Campo Obbligatorio!"
+              },
+              {
+                "Name": "DebounceInterval",
+                "Value": 5
               }
             ]
           },
@@ -121,6 +125,10 @@
               {
                 "Name": "RequiredError",
                 "Value": "Campo Obbligatorio!"
+              },
+              {
+                "Name": "DebounceInterval",
+                "Value": 5
               }
             ]
           },
