--- a/appsettings.json
+++ b/appsettings.json
@@ -14,14 +14,18 @@
     "Url": "www.timegroup.it",
     "Email": "aaa@vvv.it"
   },
+  "Parameters": {
+    "Host": "",
+    "Port": 123
+  },
   "WizardInfrastrutture": {
     "Menu": {
       "Title": "Menu",
       "Dense": true,
       "NestedMenus": [
         {
-          "Name": "Logistica",
-          "Description": "",
+          "Name": "Distinta di carico",
+          "Description": "Distinte di carico Bobine",
           "Expanded": true,
           "NestedMenus": [
             {
@@ -54,6 +58,21 @@
         "Id": "AFE63957-3F5E-4ECF-91A5-C4B2E5B341A9",
         "Title": "Maschera di Lettura Barcode",
         "Components": [
+          {
+            "Id": "AFE63956-3F5E-4ECF-91A6-C4B2E52341A7",
+            "Assembly": "Blazor.WizardComponent.Client",
+            "Namespace": "Blazor.WizardComponent.Client.Components",
+            "Name": "DistintaCaricoComponent",
+            "Title": "Distinta di Carico",
+            "Description": "Distinta di Carico",
+            "Defaults": [],
+            "ComponentParameters": [
+              {
+                "Name": "IsLocalStorage",
+                "Value": true
+              }
+            ]
+          },
           {
             "Id": "AFE63957-3F5E-4ECF-91A5-C4B2E5B341A8",
             "Assembly": "Blazor.WizardComponent.Client",
