--- a/appsettings.json
+++ b/appsettings.json
@@ -74,6 +74,17 @@
             ]
           },
           {
+            "Id": "AFE63956-3F5E-4ECH-91A6-C4B2E52341A7",
+            "Assembly": "Blazor.WizardComponent.Client",
+            "Namespace": "Blazor.WizardComponent.Client.Components",
+            "Name": "CartellinoComponent",
+            "Title": "Foto Cartellino",
+            "Description": "Esempio di cartellino",
+            "Defaults": [],
+            "ComponentParameters": [
+            ]
+          },
+          {
             "Id": "AFE63957-3F5E-4ECF-91A5-C4B2E5B341A8",
             "Assembly": "Blazor.WizardComponent.Client",
             "Namespace": "Blazor.WizardComponent.Client.Components",
@@ -161,6 +172,16 @@
             "Defaults": [],
             "ComponentParameters": [],
             "DtoParameters": [
+              {
+                "FromId": "AFE63956-3F5E-4ECF-91A6-C4B2E52341A7",
+                "FromProperty": "Id",
+                "ToProperty": "Id"
+              },
+              {
+                "FromId": "AFE63956-3F5E-4ECF-91A6-C4B2E52341A7",
+                "FromProperty": "NumeroBobine",
+                "ToProperty": "NumeroBobine"
+              },
               {
                 "FromId": "AFE63957-3F5E-4ECF-91A5-C4B2E5B341A8",
                 "FromProperty": "Barcode",
