--- a/appsettings.json
+++ b/appsettings.json
@@ -95,7 +95,7 @@
             "ComponentParameters": [
               {
                 "Name": "Immediate",
-                "Value": true
+                "Value": false
               },
               {
                 "Name": "InputMaxCharacters",
@@ -134,7 +134,7 @@
             "ComponentParameters": [
               {
                 "Name": "Immediate",
-                "Value": true
+                "Value": false
               },
               {
                 "Name": "InputMaxCharacters",
