--- a/appsettings.json
+++ b/appsettings.json
@@ -138,7 +138,7 @@
               },
               {
                 "Name": "InputMaxCharacters",
-                "Value": 25
+                "Value": 10
               },
               {
                 "Name": "HelperText",
@@ -158,7 +158,7 @@
               },
               {
                 "Name": "DebounceInterval",
-                "Value": 0
+                "Value": 10
               }
             ]
           },
@@ -176,6 +176,11 @@
                 "FromId": "AFE63956-3F5E-4ECF-91A6-C4B2E52341A7",
                 "FromProperty": "Id",
                 "ToProperty": "Id"
+              },
+              {
+                "FromId": "AFE63956-3F5E-4ECF-91A6-C4B2E52341A7",
+                "FromProperty": "Description",
+                "ToProperty": "Description"
               },
               {
                 "FromId": "AFE63956-3F5E-4ECF-91A6-C4B2E52341A7",
