--- a/appsettings.json
+++ b/appsettings.json
@@ -121,6 +121,13 @@
                 "Name": "DebounceInterval",
                 "Value": 0
               }
+            ],
+            "DtoParameters": [
+              {
+                "FromId": "AFE63956-3F5E-4ECF-91A6-C4B2E52341A7",
+                "FromProperty": "IsCamera",
+                "ToProperty": "IsCamera"
+              }
             ]
           },
           {
@@ -159,6 +166,13 @@
               {
                 "Name": "DebounceInterval",
                 "Value": 0
+              }
+            ],
+            "DtoParameters": [
+              {
+                "FromId": "AFE63956-3F5E-4ECF-91A6-C4B2E52341A7",
+                "FromProperty": "IsCamera",
+                "ToProperty": "IsCamera"
               }
             ]
           },
