--- a/appsettings.json
+++ b/appsettings.json
@@ -59,7 +59,18 @@
         "Title": "Maschera di Lettura Barcode",
         "Components": [
           {
-            "Id": "AFE63956-3F5E-4ECF-91A6-C4B2E52341A7",
+            "Id": "BFE63956-3F5E-4ECF-91A6-D4B2E52341A7",
+            "Assembly": "Blazor.WizardComponent.Client",
+            "Namespace": "Blazor.WizardComponent.Client.Components",
+            "Name": "TipoDistintaComponent",
+            "Title": "Tipo Distinta di Carico",
+            "Description": "Tipo Distinta di Carico",
+            "Defaults": [],
+            "ComponentParameters": [
+            ]
+          },
+          {
+            "Id": "AFE63956-3F5E-4ECF-91A6-D4B2E52341A7",
             "Assembly": "Blazor.WizardComponent.Client",
             "Namespace": "Blazor.WizardComponent.Client.Components",
             "Name": "DistintaCaricoComponent",
@@ -70,6 +81,28 @@
               {
                 "Name": "IsLocalStorage",
                 "Value": true
+              }
+            ],
+            "DtoParameters": [
+              {
+                "FromId": "BFE63956-3F5E-4ECF-91A6-D4B2E52341A7",
+                "FromProperty": "Id",
+                "ToProperty": "Id"
+              },
+              {
+                "FromId": "BFE63956-3F5E-4ECF-91A6-D4B2E52341A7",
+                "FromProperty": "Description",
+                "ToProperty": "Description"
+              },
+              {
+                "FromId": "BFE63956-3F5E-4ECF-91A6-D4B2E52341A7",
+                "FromProperty": "NumeroBobine",
+                "ToProperty": "NumeroBobine"
+              },
+              {
+                "FromId": "BFE63956-3F5E-4ECF-91A6-D4B2E52341A7",
+                "FromProperty": "Date",
+                "ToProperty": "Date"
               }
             ]
           },
@@ -124,7 +157,7 @@
             ],
             "DtoParameters": [
               {
-                "FromId": "AFE63956-3F5E-4ECF-91A6-C4B2E52341A7",
+                "FromId": "AFE63956-3F5E-4ECF-91A6-D4B2E52341A7",
                 "FromProperty": "IsCamera",
                 "ToProperty": "IsCamera"
               }
@@ -170,14 +203,14 @@
             ],
             "DtoParameters": [
               {
-                "FromId": "AFE63956-3F5E-4ECF-91A6-C4B2E52341A7",
+                "FromId": "AFE63956-3F5E-4ECF-91A6-D4B2E52341A7",
                 "FromProperty": "IsCamera",
                 "ToProperty": "IsCamera"
               }
             ]
           },
           {
-            "Id": "AFE63957-3F5E-4ECF-91A6-C4B2E5B341A7",
+            "Id": "AFE63951-3F5E-4ECF-91A6-D4B2E52341A5",
             "Assembly": "Blazor.WizardComponent.Client",
             "Namespace": "Blazor.WizardComponent.Client.Components",
             "Name": "RiepilogoComponent",
@@ -187,17 +220,22 @@
             "ComponentParameters": [],
             "DtoParameters": [
               {
-                "FromId": "AFE63956-3F5E-4ECF-91A6-C4B2E52341A7",
+                "FromId": "AFE63956-3F5E-4ECF-91A6-D4B2E52341A7",
                 "FromProperty": "Id",
                 "ToProperty": "Id"
               },
               {
-                "FromId": "AFE63956-3F5E-4ECF-91A6-C4B2E52341A7",
+                "FromId": "AFE63956-3F5E-4ECF-91A6-D4B2E52341A7",
                 "FromProperty": "Description",
                 "ToProperty": "Description"
               },
               {
-                "FromId": "AFE63956-3F5E-4ECF-91A6-C4B2E52341A7",
+                "FromId": "AFE63956-3F5E-4ECF-91A6-D4B2E52341A7",
+                "FromProperty": "Date",
+                "ToProperty": "Date"
+              },
+              {
+                "FromId": "AFE63956-3F5E-4ECF-91A6-D4B2E52341A7",
                 "FromProperty": "NumeroBobine",
                 "ToProperty": "NumeroBobine"
               },
