--- a/appsettings.json
+++ b/appsettings.json
@@ -20,36 +20,34 @@
   },
   "WizardInfrastrutture": {
     "Menu": {
-      "Title": "Menu",
-      "Dense": true,
+      "Title": "Menu Personalizzato per Fornitore",
+      "Dense": false,
       "NestedMenus": [
         {
           "Name": "Distinta di carico",
           "Description": "Distinte di carico Bobine",
           "Expanded": true,
+          "Icon": "MenuOpen",
           "NestedMenus": [
             {
               "Name": "Fornitore Rossi",
               "Description": "Fornitore Rossi",
-              "FormId": "AFE63957-3F5E-4ECF-91A5-C4B2E5B341A9"
+              "FormId": "AFE63957-3F5E-4ECF-91A5-C4B2E5B341A9",
+              "Icon": "PeopleAlt"
             },
             {
               "Name": "Secondo Wizard",
               "Description": "Secondo Wizard",
-              "FormId": "AFE63953-3F5E-4ECF-91A5-C4B2E5B341A9"
+              "FormId": "AFE63953-3F5E-4ECF-91A5-C4B2E5B341A9",
+              "Icon": "People"
             },
             {
               "Name": "Terzo Wizard",
               "Description": "Terzo Wizard",
-              "FormId": "15AD27C7-D3AB-4FFD-A238-F59D9FE481A0"
+              "FormId": "15AD27C7-D3AB-4FFD-A238-F59D9FE481A0",
+              "Icon": "PeopleOutline"
             }
           ]
-        },
-        {
-          "Name": "Amministrazione",
-          "Description": "",
-          "Expanded": false,
-          "NestedMenu": []
         }
       ]
     },
