--- a/appsettings.json
+++ b/appsettings.json
@@ -30,8 +30,8 @@
           "Icon": "MenuOpen",
           "NestedMenus": [
             {
-              "Name": "Fornitore Rossi",
-              "Description": "Fornitore Rossi",
+              "Name": "Fornitore DsSmith",
+              "Description": "Fornitore DsSmith",
               "FormId": "AFE63957-3F5E-4ECF-91A5-C4B2E5B341A9",
               "Icon": "PeopleAlt"
             },
@@ -113,6 +113,14 @@
             "Description": "Esempio di cartellino",
             "Defaults": [],
             "ComponentParameters": [
+              {
+                "Name": "Foto",
+                "Value": "./cartellinoimages/DsSmith.jpg"
+              },
+              {
+                "Name": "Istruzioni",
+                "Value": "Leggere etichetta evidenziata come numero 1 ed etichetta come  numero 2"
+              }
             ]
           },
           {
