--- a/appsettings.json
+++ b/appsettings.json
@@ -687,6 +687,11 @@
               },
               {
                 "FromId": "AFE63956-3N5E-4ECF-91A6-D4B2E52341A7",
+                "FromProperty": "FornitoreId",
+                "ToProperty": "FornitoreId"
+              },
+              {
+                "FromId": "AFE63956-3N5E-4ECF-91A6-D4B2E52341A7",
                 "FromProperty": "Description",
                 "ToProperty": "Description"
               },
