--- a/appsettings.json
+++ b/appsettings.json
@@ -9,8 +9,9 @@
   "Repository": "Pwa",
   "ForceMobileRouting": false,
   "Info": {
-    "Release": "1.1.0",
-    "Name": "App",
+    "Release": "1.1.0.2",
+    "Name": "TO BarcodeReader",
+    "Date": "22-03-2024",
     "Url": "www.timegroup.it",
     "Email": "aaa@vvv.it"
   },
