--- a/appsettings.json
+++ b/appsettings.json
@@ -9,11 +9,11 @@
   "Repository": "Pwa",
   "ForceMobileRouting": false,
   "Info": {
-    "Release": "1.1.0.12",
+    "Release": "1.1.0.13",
     "Name": "TO BarcodeReader",
     "Date": "22-03-2024",
     "Url": "www.timegroup.it",
-    "Email": "aaa@vvv.it"
+    "Email": "aaa@vvvaaa.it"
   },
   "Parameters": {
     "Host": "",
