--- a/appsettings.json
+++ b/appsettings.json
@@ -158,8 +158,13 @@
             "Name": "BarcodeComponent",
             "Title": "Lettura Primo Barcode",
             "Description": "Maschera di gestione Barcode",
-            "Defaults": [],
+            "Defaults": [
+            ],
             "ComponentParameters": [
+              {
+                "Name": "Type",
+                "Value": "SerialNumber"
+              },
               {
                 "Name": "Immediate",
                 "Value": false
@@ -200,8 +205,13 @@
             "Name": "BarcodeComponent",
             "Title": "Lettura Secondo Barcode",
             "Description": "Maschera di gestione Barcode",
-            "Defaults": [],
+            "Defaults": [
+            ],
             "ComponentParameters": [
+              {
+                "Name": "Type",
+                "Value": "Info"
+              },
               {
                 "Name": "Immediate",
                 "Value": false
@@ -280,6 +290,17 @@
                 "FromId": "AFE63957-3F5E-4ECF-91A6-C4B2E5B341A6",
                 "FromProperty": "Barcode",
                 "ToProperty": "SecondoBarcode"
+              },
+              {
+
+                "FromId": "AFE63957-3F5E-4ECF-91A5-C4B2E5B341A8",
+                "FromProperty": "Type",
+                "ToProperty": "PrimoBarcodeType"
+              },
+              {
+                "FromId": "AFE63957-3F5E-4ECF-91A6-C4B2E5B341A6",
+                "FromProperty": "Type",
+                "ToProperty": "SecondoBarcodeType"
               }
             ]
           }
@@ -375,6 +396,10 @@
             "Defaults": [],
             "ComponentParameters": [
               {
+                "Name": "Type",
+                "Value": "SerialNumber"
+              },
+              {
                 "Name": "Immediate",
                 "Value": false
               },
@@ -416,6 +441,10 @@
             "Description": "Maschera di gestione Barcode",
             "Defaults": [],
             "ComponentParameters": [
+              {
+                "Name": "Type",
+                "Value": "Info"
+              },
               {
                 "Name": "Immediate",
                 "Value": false
@@ -493,6 +522,16 @@
                 "FromId": "AFE63957-3M5E-4ECF-91A6-C4B2E5B341A6",
                 "FromProperty": "Barcode",
                 "ToProperty": "SecondoBarcode"
+              },
+              {
+                "FromId": "AFE63957-3M5E-4ECF-91A5-C4B2E5B341A8",
+                "FromProperty": "Type",
+                "ToProperty": "PrimoBarcodeType"
+              },
+              {
+                "FromId": "AFE63957-3M5E-4ECF-91A6-C4B2E5B341A6",
+                "FromProperty": "Type",
+                "ToProperty": "SecondoBarcodeType"
               }
             ]
           }
@@ -590,6 +629,10 @@
             "Defaults": [],
             "ComponentParameters": [
               {
+                "Name": "Type",
+                "Value": "SerialNumber"
+              },
+              {
                 "Name": "Immediate",
                 "Value": false
               },
@@ -631,6 +674,10 @@
             "Description": "Maschera di gestione Barcode",
             "Defaults": [],
             "ComponentParameters": [
+              {
+                "Name": "Type",
+                "Value": "Info"
+              },
               {
                 "Name": "Immediate",
                 "Value": false
@@ -708,59 +755,21 @@
                 "FromId": "AFE63957-3N5E-4ECF-91A6-C4B2E5B341A6",
                 "FromProperty": "Barcode",
                 "ToProperty": "SecondoBarcode"
-              }
-            ]
-          },
-          {
-            "Id": "AFE63951-3N5E-4ECF-91A6-D4B2E52341A5",
-            "Assembly": "Blazor.WizardComponent.Client",
-            "Namespace": "Blazor.WizardComponent.Client.Components",
-            "Name": "RiepilogoComponent",
-            "Title": "Riepilogo",
-            "Description": "Salvataggio Cartellino",
-            "Defaults": [],
-            "ComponentParameters": [],
-            "DtoParameters": [
-              {
-                "FromId": "AFE63956-3N5E-4ECF-91A6-D4B2E52341A7",
-                "FromProperty": "Id",
-                "ToProperty": "Id"
-              },
-              {
-                "FromId": "AFE63956-3N5E-4ECF-91A6-D4B2E52341A7",
-                "FromProperty": "FornitoreId",
-                "ToProperty": "FornitoreId"
-              },
-              {
-                "FromId": "AFE63956-3N5E-4ECF-91A6-D4B2E52341A7",
-                "FromProperty": "Description",
-                "ToProperty": "Description"
-              },
-              {
-                "FromId": "AFE63956-3N5E-4ECF-91A6-D4B2E52341A7",
-                "FromProperty": "Date",
-                "ToProperty": "Date"
-              },
-              {
-                "FromId": "AFE63956-3N5E-4ECF-91A6-D4B2E52341A7",
-                "FromProperty": "NumeroBobine",
-                "ToProperty": "NumeroBobine"
               },
               {
                 "FromId": "AFE63957-3N5E-4ECF-91A5-C4B2E5B341A8",
-                "FromProperty": "Barcode",
-                "ToProperty": "PrimoBarcode"
+                "FromProperty": "Type",
+                "ToProperty": "PrimoBarcodeType"
               },
               {
                 "FromId": "AFE63957-3N5E-4ECF-91A6-C4B2E5B341A6",
-                "FromProperty": "Barcode",
-                "ToProperty": "SecondoBarcode"
+                "FromProperty": "Type",
+                "ToProperty": "SecondoBarcodeType"
               }
             ]
           }
+         
         ]
-
-
       },
       {
         "Id": "12AD27C7-D3AB-4FFD-A238-F59D9FE481A0",
@@ -852,6 +861,10 @@
             "Defaults": [],
             "ComponentParameters": [
               {
+                "Name": "Type",
+                "Value": "SerialNumber"
+              },
+              {
                 "Name": "Immediate",
                 "Value": false
               },
@@ -893,6 +906,10 @@
             "Description": "Maschera di gestione Barcode",
             "Defaults": [],
             "ComponentParameters": [
+              {
+                "Name": "Type",
+                "Value": "QrCode"
+              },
               {
                 "Name": "Immediate",
                 "Value": false
@@ -970,6 +987,16 @@
                 "FromId": "AFE63957-3O5E-4ECF-91A6-C4B2E5B341A6",
                 "FromProperty": "Barcode",
                 "ToProperty": "SecondoBarcode"
+              },
+              {
+                "FromId": "AFE63957-3O5E-4ECF-91A5-C4B2E5B341A8",
+                "FromProperty": "Type",
+                "ToProperty": "PrimoBarcodeType"
+              },
+              {
+                "FromId": "AFE63957-3O5E-4ECF-91A6-C4B2E5B341A6",
+                "FromProperty": "Type",
+                "ToProperty": "SecondoBarcodeType"
               }
             ]
           }
@@ -1068,6 +1095,10 @@
             "Defaults": [],
             "ComponentParameters": [
               {
+                "Name": "Type",
+                "Value": "SerialNumber"
+              },
+              {
                 "Name": "Immediate",
                 "Value": false
               },
@@ -1109,6 +1140,10 @@
             "Description": "Maschera di gestione Barcode",
             "Defaults": [],
             "ComponentParameters": [
+              {
+                "Name": "Type",
+                "Value": "Info"
+              },
               {
                 "Name": "Immediate",
                 "Value": false
@@ -1186,6 +1221,16 @@
                 "FromId": "BFE63957-3P5E-4ECF-91A6-C4B2E5B341A6",
                 "FromProperty": "Barcode",
                 "ToProperty": "SecondoBarcode"
+              },
+              {
+                "FromId": "AFE63957-3P5E-4ECF-91A5-C4B2E5B341A8",
+                "FromProperty": "Type",
+                "ToProperty": "PrimoBarcodeType"
+              },
+              {
+                "FromId": "BFE63957-3P5E-4ECF-91A6-C4B2E5B341A6",
+                "FromProperty": "Type",
+                "ToProperty": "SecondoBarcodeType"
               }
             ]
           }
@@ -1284,6 +1329,10 @@
             "Defaults": [],
             "ComponentParameters": [
               {
+                "Name": "Type",
+                "Value": "SerialNumber"
+              },
+              {
                 "Name": "Immediate",
                 "Value": false
               },
@@ -1355,6 +1404,11 @@
                 "FromId": "AFE63957-3Q5E-4ECF-91A5-C4B2E5B341A8",
                 "FromProperty": "Barcode",
                 "ToProperty": "PrimoBarcode"
+              },
+              {
+                "FromId": "AFE63957-3Q5E-4ECF-91A5-C4B2E5B341A8",
+                "FromProperty": "Type",
+                "ToProperty": "PrimoBarcodeType"
               }
             ]
           }
