--- a/appsettings.json
+++ b/appsettings.json
@@ -2289,7 +2289,7 @@
             "ComponentParameters": [
               {
                 "Name": "Foto",
-                "Value": "./cartellinoimages/PCA.jpg"
+                "Value": "./cartellinoimages/Storaenso.jpg"
               },
               {
                 "Name": "Istruzioni",
