--- a/appsettings.json
+++ b/appsettings.json
@@ -106,7 +106,15 @@
               "FormId": "14AD27C7-D3AB-4MMD-A238-F59D9FE481A0",
               "Sigla": "GEP",
               "Icon": "PeopleOutline"
+            },
+            {
+              "Name": "(ND) ND Paper",
+              "Description": "ND Paper",
+              "FormId": "14AD27C7-D3AB-4NND-A238-F59D9FE481A0",
+              "Sigla": "ND",
+              "Icon": "PeopleOutline"
             }
+
           ]
         }
       ]
@@ -2601,7 +2609,7 @@
               },
               {
                 "Name": "BarcodeLength",
-                "Value": 28
+                "Value": 13
               },
               {
                 "Name": "HelperText",
@@ -2678,6 +2686,185 @@
                 "FromId": "BFE63957-3P5E-4MMF-91A6-C4B2E5B341A6",
                 "FromProperty": "Type",
                 "ToProperty": "SecondoBarcodeType"
+              }
+            ]
+          }
+
+
+        ]
+
+
+      },
+      {
+        "Id": "14AD27C7-D3AB-4NND-A238-F59D9FE481A0",
+        "Title": "Maschera di Lettura Barcode",
+        "Components": [
+          {
+            "Id": "BFE63956-3Q5E-4NNF-91A6-D4B2E52341A7",
+            "Assembly": "Blazor.WizardComponent.Client",
+            "Namespace": "Blazor.WizardComponent.Client.Components",
+            "Name": "TipoDistintaComponent",
+            "Title": "Tipo Distinta di Carico",
+            "Description": "Tipo Distinta di Carico",
+            "Defaults": [],
+            "ComponentParameters": [
+              {
+                "Name": "FornitoreId",
+                "Value": "ND"
+              }
+            ]
+          },
+          {
+            "Id": "AFE63956-3Q5E-4NNF-91A6-D4B2E52341A7",
+            "Assembly": "Blazor.WizardComponent.Client",
+            "Namespace": "Blazor.WizardComponent.Client.Components",
+            "Name": "DistintaCaricoComponent",
+            "Title": "Distinta di Carico",
+            "Description": "Distinta di Carico",
+            "Defaults": [],
+            "ComponentParameters": [
+              {
+                "Name": "IsLocalStorage",
+                "Value": true
+              }
+            ],
+            "DtoParameters": [
+              {
+                "FromId": "BFE63956-3Q5E-4NNF-91A6-D4B2E52341A7",
+                "FromProperty": "Id",
+                "ToProperty": "Id"
+              },
+              {
+                "FromId": "BFE63956-3Q5E-4NNF-91A6-D4B2E52341A7",
+                "FromProperty": "FornitoreId",
+                "ToProperty": "FornitoreId"
+              },
+              {
+                "FromId": "BFE63956-3Q5E-4NNF-91A6-D4B2E52341A7",
+                "FromProperty": "Description",
+                "ToProperty": "Description"
+              },
+              {
+                "FromId": "BFE63956-3Q5E-4NNF-91A6-D4B2E52341A7",
+                "FromProperty": "NumeroBobine",
+                "ToProperty": "NumeroBobine"
+              },
+              {
+                "FromId": "BFE63956-3Q5E-4NNF-91A6-D4B2E52341A7",
+                "FromProperty": "Date",
+                "ToProperty": "Date"
+              }
+            ]
+          },
+          {
+            "Id": "AFE63956-3Q5E-4NNH-91A6-C4B2E52341A7",
+            "Assembly": "Blazor.WizardComponent.Client",
+            "Namespace": "Blazor.WizardComponent.Client.Components",
+            "Name": "CartellinoComponent",
+            "Title": "Foto Cartellino",
+            "Description": "Esempio di cartellino",
+            "Defaults": [],
+            "ComponentParameters": [
+              {
+                "Name": "Foto",
+                "Value": "./cartellinoimages/ND.jpg"
+              },
+              {
+                "Name": "Istruzioni",
+                "Value": "Leggere etichetta evidenziata come numero 1"
+              }
+            ]
+          },
+          {
+            "Id": "AFE63957-3Q5E-4NNF-91A5-C4B2E5B341A8",
+            "Assembly": "Blazor.WizardComponent.Client",
+            "Namespace": "Blazor.WizardComponent.Client.Components",
+            "Name": "BarcodeComponent",
+            "Title": "Lettura Primo Barcode",
+            "Description": "Maschera di gestione Barcode",
+            "Defaults": [],
+            "ComponentParameters": [
+              {
+                "Name": "Type",
+                "Value": "SerialNumber"
+              },
+              {
+                "Name": "Immediate",
+                "Value": false
+              },
+              {
+                "Name": "InputMaxCharacters",
+                "Value": 50
+              },
+              {
+                "Name": "BarcodeLength",
+                "Value": 28
+              },
+              {
+                "Name": "HelperText",
+                "Value": "In caso di inserimento manuale confermare con Enter"
+              },
+              {
+                "Name": "IsLocalStorage",
+                "Value": true
+              },
+              {
+                "Name": "DebounceInterval",
+                "Value": 0
+              }
+            ],
+            "DtoParameters": [
+              {
+                "FromId": "AFE63956-3Q5E-4NNF-91A6-D4B2E52341A7",
+                "FromProperty": "IsCamera",
+                "ToProperty": "IsCamera"
+              }
+            ]
+          },
+          {
+            "Id": "AFE63951-3Q5E-4NNF-91A6-D4B2E52341A5",
+            "Assembly": "Blazor.WizardComponent.Client",
+            "Namespace": "Blazor.WizardComponent.Client.Components",
+            "Name": "RiepilogoComponent",
+            "Title": "Riepilogo",
+            "Description": "Salvataggio Cartellino",
+            "Defaults": [],
+            "ComponentParameters": [],
+            "DtoParameters": [
+              {
+                "FromId": "AFE63956-3Q5E-4NNF-91A6-D4B2E52341A7",
+                "FromProperty": "Id",
+                "ToProperty": "Id"
+              },
+              {
+                "FromId": "AFE63956-3Q5E-4NNF-91A6-D4B2E52341A7",
+                "FromProperty": "FornitoreId",
+                "ToProperty": "FornitoreId"
+              },
+              {
+                "FromId": "AFE63956-3Q5E-4NNF-91A6-D4B2E52341A7",
+                "FromProperty": "Description",
+                "ToProperty": "Description"
+              },
+              {
+                "FromId": "AFE63956-3Q5E-4NNF-91A6-D4B2E52341A7",
+                "FromProperty": "Date",
+                "ToProperty": "Date"
+              },
+              {
+                "FromId": "AFE63956-3Q5E-4NNF-91A6-D4B2E52341A7",
+                "FromProperty": "NumeroBobine",
+                "ToProperty": "NumeroBobine"
+              },
+              {
+                "FromId": "AFE63957-3Q5E-4NNF-91A5-C4B2E5B341A8",
+                "FromProperty": "Barcode",
+                "ToProperty": "PrimoBarcode"
+              },
+              {
+                "FromId": "AFE63957-3Q5E-4NNF-91A5-C4B2E5B341A8",
+                "FromProperty": "Type",
+                "ToProperty": "PrimoBarcodeType"
               }
             ]
           }
